# rabbitmq-event-router

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  security.yml
deploy/: rabbitmq-event-router.service
migrations/: env.py
migrations/versions/: 0001_initial.py
src/rabbitmq_event_router/: __init__.py  api.py  asgi.py  consumer.py  db.py  dispatcher.py  logging_config.py  rules.py
tests/integration/: test_consumer_integration.py
tests/unit/: test_api.py  test_asgi.py  test_consumer.py  test_db.py  test_dispatcher.py  test_logging.py  test_migrations.py  test_rules.py  test_rules_properties.py
