[project]
name = "rabbitmq-event-router"
version = "0.1.0"
description = "Daemon Python que roteia eventos RabbitMQ para webhooks com regras em banco."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Otavio Abreu", email = "abreu0x.dev@gmail.com" }]
keywords = ["rabbitmq", "messaging", "fastapi", "python", "iot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking",
]
dependencies = [
  "pydantic>=2.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabbitmq_event_router"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=rabbitmq_event_router --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["src"]
