[project]
name = "rabbitmq-event-router"
version = "0.1.0"
description = "Daemon Python que roteia eventos RabbitMQ para webhooks com regras em banco."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Otavio Abreu", email = "abreu0x.dev@gmail.com" }]
keywords = ["rabbitmq", "messaging", "fastapi", "python", "iot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking",
]
dependencies = [
  "pydantic>=2.13",
  "pika>=1.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "fastapi>=0.115",
  "structlog>=24.4",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
  "testcontainers>=4.14",
  "hypothesis>=6.100",
  "httpx>=0.27",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabbitmq_event_router"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src", "tests"]

# pika/testcontainers/alembic não expõem stubs/py.typed completos.
[[tool.mypy.overrides]]
module = ["pika.*", "testcontainers.*", "alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=rabbitmq_event_router --cov-report=term-missing"
pythonpath = ["src"]
markers = [
  "integration: precisa de Docker (RabbitMQ via testcontainers)",
]
